--- a/curriculum.html
+++ b/curriculum.html
@@ -32,7 +32,7 @@
         <div class="row" >
             <div class = "column wide main">
                 <h3> Master of Science - M.Sc Mechanical Engineering</h3>
-                <p class = "subtitle"> Amirkabir University of Technology - Tehran Polytechnic, Tehran, Iran </p>
+                <p class = "subtitle"> Amirkabir University of Technology - Tehran Polytechnic (AUT), Tehran, Iran </p>
                 <p> Graduated in 2025 </br>
 		Thesis on Non-linear Vibrations Systems </br>
 		Working on Modeling and Analysis of Non-Linear Behavior of Stick-Slip Piezoelectric Motors</br>
