--- a/curriculum.html
+++ b/curriculum.html
@@ -32,14 +32,13 @@
         <div class="row" >
             <div class = "column wide main">
                 <h3> Master of Science - M.Sc Mechanical Engineering</h3>
-                <p class = "subtitle"> Amirkabir University of Technology - Tehran Polytechnic (AUT), Tehran, Iran </p>
+                <p class = "subtitle"> Amirkabir University of Technology - Tehran Polytechnic (AUT), Iran, Tehran </p>
                 <p> Graduated in 2025 </br>
 		Thesis on Non-linear Vibrations Systems </br>
 		Working on Modeling and Analysis of Non-Linear Behavior of Stick-Slip Piezoelectric Motors</br>
-		Supervisors: <a href = "https://scholar.google.com/citations?hl=en&user=f23F8UMAAAAJ&view_op=list_works" target = "_blank">Prof. M. M. Aghdam</a>, <a href = "https://scholar.google.com/citations?hl=en&user=kpPHZ94AAAAJ&view_op=list_works" target = "_blank">Dr. Afshin Taghvaiepour</a></br>
-		Co-supervisor: <a href = "http://www.cim.mcgill.ca/~franglez/" target = "_blank">Dr. Francisco J. González</a></br>
+		Supervisors: <a href = "https://scholar.google.com/citations?user=emgyLBoAAAAJ&hl=en">Dr. Hamed Ghafarirad</a>
 
-		CGPA= 3.63, Last 20 credits: <b>GPA: 4/4 </b>
+		%CGPA= 3.63, Last 20 credits: <b>GPA: 4/4 </b>
 		
             </p>
             </div>
@@ -67,22 +66,21 @@
         <div class = "row">
             <div class = "column wide main">
                 <h3> Bachelor's Degree </h3>
-                <p class = "subtitle"> Imam Khomeini International University, Qazvin, Iran </p>
+                <p class = "subtitle"> Isfahan University of Technology (IUT), Iran, Isfahan </p>
                 <p>
-			Graduated in 2020 </br>
+			Graduated in 2023 </br>
 			Bachelor Project:</br>
-		- Properties of smart materials as well as Auxetic meta-materials</br>
-		- Investigation of the effect of carbon nanotubes waviness on mechanical properties (Plates, shells, and beams)</br>
-		Supervisor: <a href = "https://scholar.google.com/citations?user=D5DwUhwAAAAJ&hl=en" target = "_blank">Dr. Farzad Ebrahimi </a></br>
-		CGPA=3.63
-		Last 4 semesters <b>GPA: 3.96</b></br>
+		-  Ring Rolling Finite Element Analysis in The Presence of the Guide Rolls</br>
+		Supervisor: <a href = "https://scholar.google.com/citations?user=bUaxXiMAAAAJ&hl=en">Prof. Mohammad Reza Forouzan
+ </a></br>
+		CGPA=3.83
 
 			
 </br>
-		Awarded Exam-Free M.Sc. Admission Offer from Imam Khomeini International University to Mechanical Engineering Master Program regarding High GPA </p>
+		Awarded Exam-Free M.Sc. Admission Offer from Amirkabir University of Techonolgy (AUT) and Isfahan University of Technology (IUT) to Mechanical Engineering Master Program regarding High GPA </p>
             </div>
             <div class = "column narrow" style = "padding: 28px 40px;" >
-		    <a href = "http://ikiu.ac.ir/en" target = "_blank">
+		    <a href = "https://english.iut.ac.ir/">
                     <img
                         src = "images/Imam-Khomeini-International-University.png"
                         alt = "IKIU logo"
