--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
             <div class = "column wide main">
                 <p style = "max-width: 500px;">
 			
-		Now, I am studying master of science in mechanical engineering (Control & vibrations) at <a href = "https://aut.ac.ir/en" target = "_blank">AmirKabir university of technology</a>. <br>
+		Now, I am studying master of science in mechanical engineering (Dynamic, Control & vibrations) at <a href = "https://aut.ac.ir/en" target = "_blank"> AmirKabir university of technology</a>. <br>
 		And also, working on Non-linear Vibrations and Control Systems.	 <br>
-		My great Supervisors are <a href = "https://scholar.google.com/citations?user=aiF5aIgAAAAJ&hl=en" target = "_blank">Prof. Mohsen Bahrami</a>, <a href = "https://scholar.google.com/citations?user=emgyLBoAAAAJ&hl=en" target = "_blank">Dr. Hamed Ghafarirad</a>.
+		My great Supervisors are <a href = "https://scholar.google.com/citations?user=aiF5aIgAAAAJ&hl=en" target = "_blank">Prof. Mohsen Bahrami</a>, <a href = "https://scholar.google.com/citations?user=emgyLBoAAAAJ&hl=en" target = "_blank"> Dr. Hamed Ghafarirad</a>.
 		
                 </p>
             </div>
