--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <p>
                 Hello and welcome to my page </p>
                 <p>
-                Here, you can find out more about me and my <a href = "curriculum.html">career</a> as an engineer. Please also, check out my <a href = "research.html">research</a>.</p>
+                Here, you can find out more about me and my <a href = "curriculum.html">career</a> as an engineer.
+					Please also, check out my <a href = "research.html">research</a>.</p>
             </div>
         </div>
         
