--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class = "column wide main">
                 <p style = "max-width: 500px;">
 			
-		Now, I am studying master of science in mechanical engineering (Dynamic, Control & Vibrations) at <a href = "https://aut.ac.ir/en" target = "_blank"> AmirKabir university of technology - Tehran Polytechnic.</a>. and has been accepted as a highly talented undergraduate
+		Now, I am studying master of science in mechanical engineering (Dynamic, Control & Vibrations) at <a href = "https://aut.ac.ir/en" target = "_blank"> AmirKabir university of technology - Tehran Polytechnic.</a> and has been accepted as a highly talented undergraduate
  student at the Master’s program <br>
 		And also, working on Non-linear Vibrations and Control Systems.	 <br>
 		My great Supervisors are <a href = "https://scholar.google.com/citations?user=aiF5aIgAAAAJ&hl=en" target = "_blank">Prof. Mohsen Bahrami</a>, <a href = "https://scholar.google.com/citations?user=emgyLBoAAAAJ&hl=en" target = "_blank"> Dr. Hamed Ghafarirad</a>.
@@ -94,7 +94,7 @@
                 <p style = "max-width: 500px">
 		
 			
-		I earned a bachelor's degree in mechanical engineering and (Electrical Engineering minor) in 2023 from Isfahan University of Technology.<br>
+		I earned a bachelor's degree in mechanical engineering (Highest Ranking Student) and Electrical Engineering minor in 2023 from Isfahan University of Technology.<br>
 		For Bachelor Project I worked on  Ring Rolling Finite Element Analysis in The Presence of the Guide Rolls under the supervision of <a href = "https://scholar.google.com/citations?user=bUaxXiMAAAAJ&hl=en" target = "_blank">Prof. Mohammad Reza Forouzan </a>.
 			
                 </p>
