--- a/curriculum.html
+++ b/curriculum.html
@@ -129,8 +129,8 @@ National Organization for Development of Exceptional Talents
                 <br/>
                 <a href = "https://www.linkedin.com/school/iransampad/" target = "_blank">
                     <img
-                        src = "images/Shahid_Soltani_School.jpg"
-                        alt = "Shahid Soltani3 School"
+                        src = "images/Sampad_sirjan_logo.png"
+                        alt = "Sampad sirjan"
                         width = 100%
                         /></a>
             </div>
