--- a/teaching.html
+++ b/teaching.html
@@ -99,7 +99,7 @@
             <div class = "column narrow" style = "padding-top:20px;">
                 <a href = "http://iut.ac.ir" target = "_blank">
                     <img
-                    src = "images/mech_iut.jpg"
+                    src = "images/mechdept.jpg"
                     alt = "mech enf dept"
                     width=100%
                     height=100% />
