--- a/professional.html
+++ b/professional.html
@@ -40,7 +40,7 @@
             </div>
             <div class = "column narrow" style = "padding-top:20px;">
                     <img
-                    src = "GOLGOHAR.png"
+                    src = "images/GOLGOHAR.png"
                     alt = "golgohar"
                     width=100%
                     height=100%>
