--- a/curriculum.html
+++ b/curriculum.html
@@ -78,7 +78,7 @@
 				
 </br>
 				
-		Awarded Exam-Free M.Sc. Admission Offer from Amirkabir University of Techonolgy (AUT) and Iran University of Science & Technology (IUST) and also  Isfahan University of Technology (IUT) to Mechanical Engineering Master Program regarding High GPA </p>
+		Awarded Exam-Free M.Sc. Admission Offer from Amirkabir University of Techonolgy (AUT) and Iran University of Science & Technology (IUST) and also  Isfahan University of Technology (IUT) to Mechanical Engineering Master's Program regarding High GPA </p>
             </div>
             <div class = "column narrow" style = "padding: 28px 40px;" >
 		    <a href = "https://english.iut.ac.ir/">
