--- a/professional.html
+++ b/professional.html
@@ -36,7 +36,7 @@
                 <p style = "color: #888;"> Golgohar Mining and Industrial Co, Sirjan, Kerman, Iran<br> Jun, 2022- Sep, 2022</p>
                 <p> Golgohar Mining and industry Company as one of key actors in Iran steel production value chain, by developing its strategic plan and its implementation attempts to in national and regional contribution to the production of concentrate, pellet and steel.
 			</br>I gained practical experience through an internship at Golgohar Mining and Industrial Company. This hands-on experience provided me with a deeper understanding of engineering processes and real-world applications.		
-			</br>Technical Office, Center Control Room, Vibration Analysis 
+			</br>Technical Office, Center Control Room 
 		    <a href = "https://www.geg.ir/en_home" target = "_blank">GEG website</a>
 		    </p>
             </div>
