--- a/curriculum.html
+++ b/curriculum.html
@@ -33,7 +33,7 @@
             <div class = "column wide main">
                 <h3> Master of Science - M.Sc Mechanical Engineering</h3>
                 <p class = "subtitle"> Amirkabir University of Technology - Tehran Polytechnic (AUT), Iran, Tehran </p>
-                <p> Graduated in 2025 </br>
+                <p> Sep 2025 - Present </br>
 		Thesis on Non-linear Vibrations Systems </br>
 		Working on Modeling and Analysis of Non-Linear Behavior of Stick-Slip Piezoelectric Motors</br>
 		Supervisors: <a href = "https://scholar.google.com/citations?user=emgyLBoAAAAJ&hl=en"> Dr. Hamed Ghafarirad</a></br>
