--- a/professional.html
+++ b/professional.html
@@ -42,8 +42,8 @@
             </div>
             <div class = "column narrow" style = "padding-top:20px;">
                     <img
-                    src = "images/GOLGOHAR.png"
-                    alt = "golgohar"
+                    src = "images/sensors and actuators lab.png"
+                    alt = "sensors and actuators"
                     width=100%
                     height=100%>
                     </img>
