--- a/curriculum.html
+++ b/curriculum.html
@@ -67,7 +67,7 @@
                 <h3> Bachelor's Degree </h3>
                 <p class = "subtitle"> Isfahan University of Technology (IUT), Iran, Isfahan </p>
                 <p>
-			Graduated in 2023 </br>
+			Sep 2019 - Sep 2023 </br>
 			Bachelor Project:</br>
 	        Ring Rolling Finite Element Analysis in The Presence of the Guide Rolls</br>
 		Supervisor: <a href = "https://scholar.google.com/citations?user=bUaxXiMAAAAJ&hl=en">Prof. Mohammad Reza Forouzan
@@ -109,6 +109,7 @@
                 <h3> High School Diploma </h3>
                 <p>
 			National Organization for Development of Exceptional Talents (NODET)</br>
+		    2013 - 2019 </br>
 			Mathematics and Physics</br>
 GPA=4</b></br>
 <i>
