--- a/teaching.html
+++ b/teaching.html
@@ -32,9 +32,8 @@
                 <h3> Automatic Control  </h3>
                 <p class ="subtitle">
                 	Fall 2025 <br>
-			<b>Instructor:</b> Dr. Hamed Ghafarirad,
-
-                Mechanical Engineering Department, </br>Amirkabir University of Technology </br></p>
+			<b>Instructor:</b> Dr. Hamed Ghafarirad, </br>
+                Mechanical Engineering Department, Amirkabir University of Technology </br></p>
                 <p> </p>
             </div>
 
@@ -43,9 +42,9 @@
                 <h3> Mechanical Vibrations  </h3>
                 <p class ="subtitle">
                 	Spring 2025 <br>
-			<b>Instructor:</b> Dr. Hamed Ghafarirad, 
+			<b>Instructor:</b> Dr. Hamed Ghafarirad, </br> 
 
-                Mechanical Engineering Department, <br>Amirkabir University of Technology</p>
+                Mechanical Engineering Department, Amirkabir University of Technology</p>
                 <p> </p>
             </div>
 	            
@@ -56,9 +55,9 @@
                 <h3> Basics of Electricity & Electronics  </h3>
                 <p class ="subtitle">
                 	Fall 2024 <br>
-			<b>Instructor:</b> Dr. Hamed Ghafarirad,
+			<b>Instructor:</b> Dr. Hamed Ghafarirad,<br>
 
-                Mechanical Engineering Department, <br>Amirkabir University of Technology</p>
+                Mechanical Engineering Department, Amirkabir University of Technology</p>
                 <p> </p>
             </div>
 
@@ -79,8 +78,8 @@
                 <h3> Mechanical Engineering Design ( I & II ) </h3>
                 <p class ="subtitle">
                 	Fall 2022 & Spring 2023 <br>
-			<b>Instructor:</b> Prof. Mohammad Reza Forouzan,
-                Mechanical Engineering Department, <br>Isfahan University of Technology</p>
+			<b>Instructor:</b> Prof. Mohammad Reza Forouzan, <br>
+                Mechanical Engineering Department, Isfahan University of Technology</p>
                 <p> </p>
             </div>
 
@@ -90,8 +89,8 @@
                 <h3> Automatic Control </h3>
                 <p class ="subtitle">
                 	Fall 2022 <br>
-			<b>Instructor:</b> Dr. Saeed Behbahani,
-                Mechanical Engineering Department, <br>Isfahan University of Technology</p>
+			<b>Instructor:</b> Dr. Saeed Behbahani,<br>
+                Mechanical Engineering Department, Isfahan University of Technology</p>
                 <p> </p>
             </div>
 
