--- a/teaching.html
+++ b/teaching.html
@@ -32,7 +32,7 @@
                 <h3> Automatic Control  </h3>
                 <p class ="subtitle">
                 	Fall 2025 <br>
-			<b>Instructor:</b> Dr. Hamed Ghafarirad, </br>
+			<b>Instructor:</b> Dr. Hamed Ghafarirad </br>
                 Mechanical Engineering Department, Amirkabir University of Technology </br></p>
                 <p> </p>
             </div>
@@ -42,7 +42,7 @@
                 <h3> Mechanical Vibrations  </h3>
                 <p class ="subtitle">
                 	Spring 2025 <br>
-			<b>Instructor:</b> Dr. Hamed Ghafarirad, </br> 
+			<b>Instructor:</b> Dr. Hamed Ghafarirad </br> 
 
                 Mechanical Engineering Department, Amirkabir University of Technology</p>
                 <p> </p>
@@ -55,7 +55,7 @@
                 <h3> Basics of Electricity & Electronics  </h3>
                 <p class ="subtitle">
                 	Fall 2024 <br>
-			<b>Instructor:</b> Dr. Hamed Ghafarirad,<br>
+			<b>Instructor:</b> Dr. Hamed Ghafarirad <br>
 
                 Mechanical Engineering Department, Amirkabir University of Technology</p>
                 <p> </p>
@@ -75,10 +75,10 @@
         
         <div class = "row">
             <div class = "main column wide">
-                <h3> Mechanical Engineering Design ( I & II ) </h3>
+                <h3> Mechanical Engineering Design (I & II) </h3>
                 <p class ="subtitle">
                 	Fall 2022 & Spring 2023 <br>
-			<b>Instructor:</b> Prof. Mohammad Reza Forouzan, <br>
+			<b>Instructor:</b> Prof. Mohammad Reza Forouzan <br>
                 Mechanical Engineering Department, Isfahan University of Technology</p>
                 <p> </p>
             </div>
@@ -89,7 +89,7 @@
                 <h3> Automatic Control </h3>
                 <p class ="subtitle">
                 	Fall 2022 <br>
-			<b>Instructor:</b> Dr. Saeed Behbahani,<br>
+			<b>Instructor:</b> Dr. Saeed Behbahani <br>
                 Mechanical Engineering Department, Isfahan University of Technology</p>
                 <p> </p>
             </div>
