--- a/other.html
+++ b/other.html
@@ -37,5 +37,7 @@
                 <!-- سایر محتوا اینجا می‌تواند باشد -->
             </div>
         </div>
+              <p class = "footer"> &copy; </p>
+
     </body>
 </html>
