--- a/research.html
+++ b/research.html
@@ -45,5 +45,7 @@
                 <!-- سایر محتوا اینجا می‌تواند باشد -->
             </div>
         </div>
+			                <p class = "footer"> &copy; </p>
+
     </body>
 </html>
