--- a/publications.html
+++ b/publications.html
@@ -19,8 +19,8 @@
         </ul>
         
         <ul class = "subnavigation">
-            <li> <a class = "active"  href = "research.html">       Projects       </a> </li>
-            <li> <a class = "bold"   href = "publications.html">   Publications   </a> </li>
+            <li> <a class = "black"  href = "research.html">       Projects       </a> </li>
+            <li> <a class = "active"   href = "publications.html">   Publications   </a> </li>
         </ul>
         
         <div class = "header" />
