--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
 
         <h2>Fields of Research:</h2>
         <ul>
-            <li>Vibration (Non-linear, Continuous systems, Based Condition Health Monitoring)</li><br>
+            <li>Vibration (Non-Linear, Continuous Systems, Based Condition Health Monitoring)</li><br>
             <li>Control systems (Linear, Non-Linear, Advanced, Optimal, Digital)</li><br>
             <li>Mechatronics (Sensors and Actuators, MEMS, NEMS)</li><br>
             <li>Robotics and Automation</li><br>
