--- a/other.html
+++ b/other.html
@@ -15,7 +15,7 @@
             <li> <a class = "black"  href = "curriculum.html">     Overview       </a> </li>
             <li> <a class = "black"  href = "teaching.html">       Teaching       </a> </li>
             <li> <a class = "black"  href = "publications.html">   Publications   </a> </li>
-            <li> <a class = "bold"   href = "other.html">          Licenses & certifications       </a> </li>
+            <li> <a class = "bold"   href = "other.html">          Licenses & Certifications       </a> </li>
         </ul>
         
         <ul class = "navigation">
