--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul class = "navigation">
             <li> <a class = "active" href="index.html">         Home        </a> </li>
             <li> <a class = "white"  href="curriculum.html">    Curriculum  </a> </li>
-            <li> <a class = "white"  href="publications.html">  Research    </a> </li>
+            <li> <a class = "white"  href="research.html">  Research    </a> </li>
             <!--li> <a href="more.htm">                + More        </a> </li-->
         </ul>
         
