--- a/other.html
+++ b/other.html
@@ -14,7 +14,7 @@
         <ul class = "subnavigation">
             <li> <a class = "black"  href = "curriculum.html">     Overview       </a> </li>
             <li> <a class = "black"  href = "teaching.html">       Teaching       </a> </li>
-            <li> <a class = "black"  href = "publications.html">   Publications   </a> </li>
+            <li> <a class = "black"  href = "research.html">   Publications   </a> </li>
             <li> <a class = "bold"   href = "other.html">          Licenses & Certifications       </a> </li>
         </ul>
         
