--- a/research.html
+++ b/research.html
@@ -28,13 +28,12 @@
         <div class = "row">
             <div class = "main column wide">
                 <h3> Fields of Research: </h3>
-               <li>Vibration (Non-Linear, Continuous Systems, Based Condition Health Monitoring)</li><br>
+               <li>Vibrations (Non-Linear, Continuous Systems, Based Condition Health Monitoring)</li><br>
             <li>Control systems (Linear, Non-Linear, Advanced, Optimal, Digital)</li><br>
-            <li>Mechatronics (Sensors and Actuators, MEMS, NEMS)</li><br>
+            <li>Mechatronics</li><br>
             <li>Robotics and Automation</li><br>
             <li>Mechanism Design</li><br>
             <li>FEM</li><br>
-            <li>System Dynamics</li><br>
             <li>Medical Instruments</li><br>
             <li>Orthopedic Biomechanics</li><br>
 
