--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@
             <li>Non-Linear Systems and Control</li><br>
 		    <li>Micro/Nano Systems (MEMS/NEMS)</li><br>
             <li>Special Purpose Robotics and Intelligent Machines</li><br>
-            <li>FEM</li><br>
+			<li>Applied Artificial Intelligence</li><br>
             <li>Medical Instruments</li><br>
 
             
