--- a/research.html
+++ b/research.html
@@ -31,8 +31,8 @@
             <li>Vibrations (Continuous Systems, Based Condition Health Monitoring)</li><br>
 			<li>Nonlinear Dynamical Systems and Oscillations</li><br>
             <li>Linear and Nonlinear Control</li><br>
-            <li>Intelligent Autonomous Systems</li><br>
-		    <li>Micro/Nano Systems (MEMS/NEMS)</li><br>
+            <li>System Identification</li><br>
+		    <li>MEMS/NEMS</li><br>
             <li>Special Purpose Robotics and Intelligent Machines</li><br>
 			<li>Applied Artificial Intelligence</li><br>
             <li>Medical Instruments</li><br>
