--- a/curriculum.html
+++ b/curriculum.html
@@ -23,7 +23,9 @@
             <li> <a class = "bold"   href = "curriculum.html">     Academic       </a> </li>
             <li> <a class = "black"  href = "professional.html">   Professional   </a> </li>
             <li> <a class = "black"  href = "teaching.html">       Teaching       </a> </li>
-		    <li> <a class = "black"   href = "other.html">          Licenses & Certifications       </a> </li>
+		    <li> <a class = "black"  href = "other.html">          Licenses & Certifications       </a> </li>
+			<li> <a class = "black"  href = "honor.html">          Honors & Awards       </a> </li>
+
         </ul>
         
         <div class = "header" />
