--- a/professional.html
+++ b/professional.html
@@ -22,7 +22,9 @@
             <li> <a class = "black"  href = "curriculum.html">     Academic       </a> </li>
             <li> <a class = "bold"   href = "professional.html">   Professional   </a> </li>
             <li> <a class = "black"  href = "teaching.html">       Teaching       </a> </li>
-	    <li> <a class = "black"   href = "other.html">          Licenses & Certifications       </a> </li>
+	        <li> <a class = "black"   href = "other.html">          Licenses & Certifications       </a> </li>
+		    <li> <a class = "black"  href = "honor.html">          Honors & Awards       </a> </li>
+
         </ul>
 
         <div class = "header" />
