--- a/honor.html
+++ b/honor.html
@@ -12,11 +12,11 @@
     
     <body>
         <ul class = "subnavigation">
-            <li> <a class = "black"  href = "curriculum.html">     Overview       </a> </li>
+            <li> <a class = "black"  href = "curriculum.html">     Academic       </a> </li>
+            <li> <a class = "black"   href = "professional.html">   Professional   </a> </li>
             <li> <a class = "black"  href = "teaching.html">       Teaching       </a> </li>
-            <li> <a class = "black"  href = "research.html">   Publications   </a> </li>
-            <li> <a class = "black"   href = "other.html">          Licenses & Certifications       </a> </li>
-              <li> <a class = "bold"   href = "honor.html">          Honors & Awards      </a> </li>
+		    <li> <a class = "black"   href = "other.html">          Licenses & Certifications       </a> </li>
+			<li> <a class = "bold"  href = "honor.html">          Honors & Awards       </a> </li>
 
         </ul>
         
