--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class = "column narrow" style = "float:right;" >
                 <img
-                    src="images/Khoddoum.jpg"
+                    src="images/a.Khoddoum.JPG"
                     alt="photo"
                     width=50%
                     height=40% />
