--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="row">
             <div class="banner">
                 <img
-                    src="images/IuT.jpg"
+                    src="images/1715072880.jpg"
                     alt="Isfahan University of Technology"
                     width = 100% />
             </div>
