--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="row">
             <div class = "banner">
                 <img
-                    src = "images/Sampad_sirjan_logo.png"
+                    src = "images/sampad_srj1.jpg.png"
                     alt = "NODET"
                     width = 100% height = 50%  ></img>
             </div>
