--- a/research.html
+++ b/research.html
@@ -30,12 +30,10 @@
         <div class = "row">
             <div class = "main column wide">
             <h3>Research Interests: </h3>
-            <li>Vibrations (Continuous Systems, Based Condition Health Monitoring)</li><br>
+            <li>Vibrations (Continuous Systems, Nonlinear, Based Condition Health Monitoring)</li><br>
 			<li>Nonlinear Dynamical Systems and Chaos</li><br>
             <li>Linear and Nonlinear Control</li><br>
-			<li>Dynamic Modeling and Analysis of MEMS/NEMS</li><br>
             <li>System Identification</li><br>
-            <li>Special Purpose Robotics and Intelligent Machines</li><br>
 			<li>Applied Artificial Intelligence</li><br>
             <li>Medical Instruments</li><br>
 
