--- a/research.html
+++ b/research.html
@@ -33,6 +33,8 @@
             <li>Vibrations (Continuous Systems, Nonlinear, Based Condition Health Monitoring)</li><br>
 			<li>Nonlinear Dynamical Systems and Chaos</li><br>
             <li>Linear and Nonlinear Control</li><br>
+            <li>Data-Driven Modeling and Control</li><br>
+				
             <li>System Identification</li><br>
 			<li>Applied Artificial Intelligence</li><br>
             <li>Medical Instruments</li><br>
